# waveAlign

./: .gitignore  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run_tests.yml
mp3processor/: CMakeLists.txt  main.c
src/wavealign/: aiff_filehandler.py  batch_process_files.py  wave_alignment.py  wave_alignment_processor.py
src/wavealign/caching/: cache_manager.py  cache_validator.py  caching_processor.py  levels.py  levels_cache_finder.py  replace_existing_cache.py  single_file_cache.py  yaml_cache.py  yaml_cache_processor.py
src/wavealign/data_collection/: array_type_info.py  audio_file_finder.py  audio_file_handler.py  audio_file_reader.py  audio_file_spec_set.py  audio_file_writer.py  audio_level_extractor.py  audio_metadata.py  audio_property_set.py  audio_property_set_generator.py  audio_property_sets_analyzer.py  audio_property_sets_reader.py  audio_spec_set.py  cache_manager.py  caching_processor.py  constants.py  find_audio_files.py  gain_calculation_strategy.py  generate_audio_spec_set.py  logging_configuration.py  metadata_extractor.py  pcm_float_converter.py  wave_alignment_reader.py  write_log_file.py  write_metadata.py
src/wavealign/dsp/: limiter.py
src/wavealign/mp3processor/: CMakeLists.txt
src/wavealign/mp3processor/include/: cyclic_redundancy_check.h  file_operations.h  getopt.h
src/wavealign/mp3processor/source/: cyclic_redundancy_check.c  file_operations.c  getopt.c  main.c
tests/: __init__.py
tests/integration/: test_mp3processor.py  test_wave_alignment_processor.py
(+97 files in other folders)
